--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,8 @@ jobs:
           os: [ubuntu-latest, macos-latest]
     steps:
       - uses: actions/checkout@v3
+        with:
+          submodules: true
       - name: Install Rust
         uses: actions-rs/toolchain@v1
         with:
