disable build for now

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,7 @@ jobs:
 
   build:
     name: Build ${{ matrix.check }} on (${{ matrix.os }})
+    if: false
     runs-on: ${{ matrix.os }}
     strategy:
         matrix:
